[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Pandapip1 <admin@pandapip1.tk>"]
description = ""
name = "glap-io"
version = "1.0.0"
[tool.poetry.dependencies]
git-client = "^0.2.1"
gmpy = "^1.17"
mysql-connector = "^2.2"
orjson = "^3.0"
profanity-check = "^1.0"
pymunk = "^5.6"
python = "^3.8"
tornado = "^6.0"
[tool.poetry.dev-dependencies]
